# nos3-lomic

./: .gitignore  .xml  README.md
cfg/: lomic-full-gui.xml  nos3-mission.xml  sc-full-config.xml  sc-minimal-gui-config.xml
cfg/InOut/: Inp_FOV.txt  Inp_Graphics.txt  Inp_IPC.txt  Inp_Sim.txt  Nodes_Simple.txt  Orb_Ellipse.txt  Orb_LEO.txt  SC_NOS3.txt
cfg/cosmos/config/system/: system.txt
cfg/gui/: cfg_gui_main.py
cfg/models/: lomic.blend  lomic.blend1  lomic.mtl  lomic.wings  lomic.wings~
cfg/nos3_defs/: cpu1_cfe_es_startup.scr  targets.cmake
cfg/nos3_defs/tables/: sch_def_msgtbl.c  sch_def_schtbl.c  to_config.c  to_lab_sub.c
cfg/sims/: nos3-simulator.xml
components/lomic_ion_cannon/fsw/: CMakeLists.txt
components/lomic_ion_cannon/fsw/mission_inc/: cannon_perfids.h
components/lomic_ion_cannon/fsw/platform_inc/: cannon_msgids.h  cannon_platform_cfg.h
components/lomic_ion_cannon/fsw/src/: cannon_app.c  cannon_app.h  cannon_device.c  cannon_device.h  cannon_events.h  cannon_msg.h  cannon_version.h
components/lomic_ion_cannon/fsw/unit-test/: CMakeLists.txt
components/lomic_ion_cannon/sim/: CMakeLists.txt
components/lomic_ion_cannon/sim/inc/: cannon_42_data_provider.hpp  cannon_data_point.hpp  cannon_data_provider.hpp  cannon_hardware_model.hpp
components/lomic_ion_cannon/sim/src/: cannon_42_data_provider.cpp  cannon_data_point.cpp  cannon_data_provider.cpp  cannon_hardware_model.cpp
components/lomic_ion_cannon/support/: CMakeLists.txt  cannon_checkout.c  cannon_checkout.h  device_cfg.h
components/lomic_thruster/fsw/: CMakeLists.txt
components/lomic_thruster/fsw/platform_inc/: lomic_thruster_msgids.h
components/lomic_thruster/sim/: CMakeLists.txt
components/lomic_thruster/sim/inc/: lomic_thruster_42_data_provider.hpp  lomic_thruster_data_point.hpp  lomic_thruster_hardware_model.hpp
components/lomic_thruster/sim/src/: lomic_thruster_42_data_provider.cpp  lomic_thruster_data_point.cpp  lomic_thruster_hardware_model.cpp
components/lomic_thruster/support/: CMakeLists.txt  lomic_thruster_checkout.c
scripts/: configure.py  docker_launch.sh  gsw_cosmos_build.sh
(+13 files in other folders)
